--- a/Gkiw_chess.vcxproj
+++ b/Gkiw_chess.vcxproj
@@ -19,39 +19,34 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="allmodels.h" />
     <ClInclude Include="constants.h" />
-    <ClInclude Include="cube.h" />
     <ClInclude Include="lodepng.h" />
-    <ClInclude Include="model.h" />
     <ClInclude Include="myCube.h" />
     <ClInclude Include="chess.h" />
     <ClInclude Include="shaderprogram.h" />
-    <ClInclude Include="sphere.h" />
-    <ClInclude Include="teapot.h" />
-    <ClInclude Include="torus.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="chess.cpp" />
-    <ClCompile Include="cube.cpp" />
     <ClCompile Include="lodepng.cpp" />
     <ClCompile Include="main_file.cpp" />
-    <ClCompile Include="model.cpp" />
     <ClCompile Include="shaderprogram.cpp" />
-    <ClCompile Include="sphere.cpp" />
-    <ClCompile Include="teapot.cpp" />
-    <ClCompile Include="torus.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="f_board.glsl" />
     <None Include="f_colored.glsl" />
     <None Include="f_constant.glsl" />
     <None Include="f_lambert.glsl" />
     <None Include="f_lamberttextured.glsl" />
+    <None Include="f_piece.glsl" />
+    <None Include="f_skybox.glsl" />
     <None Include="f_textured.glsl" />
+    <None Include="v_board.glsl" />
     <None Include="v_colored.glsl" />
     <None Include="v_constant.glsl" />
     <None Include="v_lambert.glsl" />
     <None Include="v_lamberttextured.glsl" />
+    <None Include="v_piece.glsl" />
+    <None Include="v_skybox.glsl" />
     <None Include="v_textured.glsl" />
   </ItemGroup>
   <ItemGroup>
