--- a/Gkiw_chess.vcxproj.filters
+++ b/Gkiw_chess.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="chess.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lodepng.cpp">
