--- a/Gkiw_chess.vcxproj
+++ b/Gkiw_chess.vcxproj
@@ -24,6 +24,7 @@
     <ClInclude Include="myCube.h" />
     <ClInclude Include="chess.h" />
     <ClInclude Include="shaderprogram.h" />
+    <ClInclude Include="stb_image.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="chess.cpp" />
