--- a/Gkiw_chess.vcxproj.filters
+++ b/Gkiw_chess.vcxproj.filters
@@ -73,5 +73,8 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="move.txt" />
+    <Text Include="move_1.txt" />
+    <Text Include="move_2.txt" />
+    <Text Include="readme.txt" />
   </ItemGroup>
 </Project>
