--- a/Gkiw_chess.vcxproj
+++ b/Gkiw_chess.vcxproj
@@ -44,7 +44,7 @@
   <ItemGroup>
     <Text Include="move.txt" />
     <Text Include="move_1.txt" />
-    <Text Include="readme.txt" />
+    <Text Include="readme.md" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
